--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "sanity"
   ],
   "dependencies": {
+    "@portabletext/react": "^3.0.4",
     "@sanity/icons": "^2.1.0",
+    "@sanity/image-url": "^1.0.2",
+    "@sanity/preview-kit": "^2.4.7",
     "@sanity/ui": "^1.2.0",
     "@sanity/vision": "^3.0.0",
     "react": "^18.2.0",
